Added support for linting handlebars files in Admin when committing
- this requires duplicating the `*.js` definition as per the lint-staged
  docs because only the closest set of configuration applies at any one time

--- a/ghost/admin/package.json
+++ b/ghost/admin/package.json
@@ -173,6 +173,10 @@
   "ember": {
     "edition": "octane"
   },
+  "lint-staged": {
+    "*.hbs": "ember-template-lint",
+    "*.js": "eslint"
+  },
   "dependencies": {
     "path-browserify": "1.0.1",
     "webpack": "5.74.0"
