--- a/ghost/audience-feedback/package.json
+++ b/ghost/audience-feedback/package.json
@@ -24,6 +24,8 @@
     "sinon": "14.0.1"
   },
   "dependencies": {
-    "@tryghost/errors": "1.2.17"
+    "@tryghost/errors": "1.2.17",
+    "@tryghost/tpl": "0.1.18",
+    "bson-objectid": "2.0.3"
   }
 }
