--- a/ghost/core/package.json
+++ b/ghost/core/package.json
@@ -58,6 +58,7 @@
     "@tryghost/admin-api-schema": "4.2.0",
     "@tryghost/api-framework": "0.0.0",
     "@tryghost/api-version-compatibility-service": "0.0.0",
+    "@tryghost/audience-feedback": "0.0.0",
     "@tryghost/bookshelf-plugins": "0.5.2",
     "@tryghost/bootstrap-socket": "0.0.0",
     "@tryghost/color-utils": "0.1.21",
